ansible/roles/kube-deployment/files/frontend/service.yml
apiVersion: v1
metadata:
  namespace: example-app
  name: example-svc
kind: Service
spec:
  type: NodePort
  ports:
    - protocol: TCP
      targetPort: 5000
      port: 5000
      nodePort: 30090
  selector:
    app: frontend
